# depo-audio

./: .gitignore  .prettierrc  CHANGELOG.md  LICENSE  README.md  SECURITY.md  astro.config.mjs  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
design/: tokens.json
docs/: index.html
public/: site.webmanifest
scripts/: setup-dev.sh
src/: App.css  App.jsx  constants.js  globals.css  main.jsx  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: license.rtf
src-tauri/src/: analysis.rs  catdetect.rs  commands.rs  conversion.rs  denoise.rs  dereverb.rs  enhance.rs  ffmpeg.rs  helpers.rs  lib.rs  main.rs  merge.rs  models.rs  persistence.rs  preview.rs  safety.rs  scoring.rs  speakers.rs  types.rs  vad.rs
src/__tests__/: constants.test.js  player.test.js  transcript.test.js  utils.test.js
src/components/: ConverterMockup.astro  LibraryMockup.astro  Nav.astro  SettingsPanel.jsx  UpdateBanner.jsx
src/components/Convert/: ConvertTab.jsx  FileRow.jsx  FormatTable.jsx  MiniPlayer.jsx  PreviewBtn.jsx  ProcessingToggle.jsx
src/components/Merge/: MergeTab.jsx
src/components/Player/: PlayerTab.jsx  Transcript.jsx
src/components/common/: ComparePlayer.jsx  ErrorBoundary.jsx  Icons.jsx  PlayerBar.jsx  QueuePanel.jsx  Spinner.jsx  StatusChip.jsx  Toggle.jsx  UpdateBanner.jsx  Waveform.jsx
src/components/ui/: card.jsx  dialog.jsx  select.jsx  tabs.jsx
src/hooks/: PreferencesContext.jsx  useAudioPlayer.js  useConversion.js  useFileDrop.js  usePlayer.js  usePreferences.js  usePreview.js  useTheme.js  useUpdater.js
src/layouts/: Layout.astro
src/lib/: player.js  transcript.js
src/pages/: index.astro  robots.txt.astro  sitemap.xml.astro
src/styles/: global.css  tokens.css
