[package]
name = "depo-audio"
version = "0.7.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "depo_audio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

# System
dirs-next = "2.0"
sha2 = "0.10"
fs2 = "0.4"

# AI audio processing
nnnoiseless = "0.5"
ort = "2.0.0-rc.12"
hound = "3.5"
ndarray = "0.17"
