[package]
name = "depo-audio"
version = "0.8.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "depo_audio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
regex = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

# System
dirs-next = "2.0"
sha2 = "0.11"

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# AI audio processing
nnnoiseless = { version = "0.5", default-features = false, features = ["dasp"] }
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
hound = "3.5"
ndarray = "0.17"
rustfft = "6"
libloading = "0.9"

# Auto-update via GitHub Releases — desktop only (these plugins don't build for mobile)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
